# Inrix

./: .gitignore  CLAUDE.md  DATA_FORMAT.md  DESIGN_HISTORY.md  Eagle Rd TT Comparisons.xlsx  README.md  REVIEW_APP_2026-07-18.md  REVIEW_ITEM14.md  REVIEW_ITEMS15-18.md  ROADMAP.md  _Plot Speed.ipynb  _metadata KML.ipynb  pyproject.toml  requirements.txt  t-test-apr23-aug23-sat-sun.csv  t-test-apr25-aug25.csv  t-test-aprmay23-augsep23-sat-sun.csv  t-test-jan24-jan25.csv  t-test-jun23-jun25.csv  t-test-jun23-jun25.xlsx  t-test-may25-jul25.csv  t-test-sep24-aug25.csv  t-test-sep24-nov24.csv
.claude/: launch.json
gui/: __init__.py  app.py  figures.py
gui/assets/: fix_table_edit.js  tooltip.js
legacy/: __init__.py  names_csv.py
src/inrix_tools/: __init__.py  aadt.py  beforeafter.py  changepoint.py  decompose.py  geometry.py  io.py  kml.py  names.py  speed.py  store.py  timebins.py
tests/: test_aadt.py  test_beforeafter.py  test_changepoint.py  test_decompose.py  test_geometry.py  test_gui.py  test_io.py  test_kml.py  test_legacy_names_csv.py  test_names.py  test_scaffold.py  test_speed.py  test_store.py  test_timebins.py
